// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|Scrollable basic 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-83b6zj=""
        >
          <p
            data-css-r3ja7m=""
          >
            There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
          </p>
          <p
            data-css-r3ja7m=""
          >
            You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
          </p>
          <p
            data-css-r3ja7m=""
          >
            I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
          </p>
          <p
            data-css-r3ja7m=""
          >
            We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
          </p>
        </div>
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-1tfmk30=""
  >
    <div
      data-css-83b6zj=""
    >
      <p
        data-css-r3ja7m=""
      >
        There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
      </p>
      <p
        data-css-r3ja7m=""
      >
        You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
      </p>
      <p
        data-css-r3ja7m=""
      >
        I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
      </p>
      <p
        data-css-r3ja7m=""
      >
        We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Scrollable dynamic sizing 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-18kkulc=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-1g8berk=""
        >
          <div
            data-css-1y16c93=""
            data-css-83b6zj=""
          >
            <p
              data-css-r3ja7m=""
            >
              There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
            </p>
            <p
              data-css-r3ja7m=""
            >
              You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
            </p>
            <p
              data-css-r3ja7m=""
            >
              Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
            </p>
            <p
              data-css-r3ja7m=""
            >
              I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
            </p>
            <p
              data-css-r3ja7m=""
            >
              Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
            </p>
            <p
              data-css-r3ja7m=""
            >
              Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
            </p>
            <p
              data-css-r3ja7m=""
            >
              We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
            </p>
          </div>
          <div
            data-css-1fr3949=""
          >
            <button
              disabled={true}
              onClick={[Function]}
            >
              collapse
            </button>
            <button
              onClick={[Function]}
            >
              expand
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots components|Scrollable no scroll needed 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <p
          data-css-r3ja7m=""
        >
          hello world
        </p>
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-1tfmk30=""
  >
    <p
      data-css-r3ja7m=""
    >
      hello world
    </p>
  </div>
</div>
`;

exports[`Storyshots components|Scrollable with container padding 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-1y16c93=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-83b6zj=""
        >
          <p
            data-css-r3ja7m=""
          >
            There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
          </p>
          <p
            data-css-r3ja7m=""
          >
            You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
          </p>
          <p
            data-css-r3ja7m=""
          >
            I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
          </p>
          <p
            data-css-r3ja7m=""
          >
            We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
          </p>
        </div>
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-1tfmk30=""
    data-css-1y16c93=""
  >
    <div
      data-css-83b6zj=""
    >
      <p
        data-css-r3ja7m=""
      >
        There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
      </p>
      <p
        data-css-r3ja7m=""
      >
        You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
      </p>
      <p
        data-css-r3ja7m=""
      >
        I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
      </p>
      <p
        data-css-r3ja7m=""
      >
        We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Scrollable with content padding 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-1y16c93=""
          data-css-83b6zj=""
        >
          <p
            data-css-r3ja7m=""
          >
            There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
          </p>
          <p
            data-css-r3ja7m=""
          >
            You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
          </p>
          <p
            data-css-r3ja7m=""
          >
            I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
          </p>
          <p
            data-css-r3ja7m=""
          >
            We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
          </p>
        </div>
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-1tfmk30=""
  >
    <div
      data-css-1y16c93=""
      data-css-83b6zj=""
    >
      <p
        data-css-r3ja7m=""
      >
        There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
      </p>
      <p
        data-css-r3ja7m=""
      >
        You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
      </p>
      <p
        data-css-r3ja7m=""
      >
        I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
      </p>
      <p
        data-css-r3ja7m=""
      >
        Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
      </p>
      <p
        data-css-r3ja7m=""
      >
        We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Scrollable with custom tag 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <main
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-83b6zj=""
        >
          <p
            data-css-r3ja7m=""
          >
            There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
          </p>
          <p
            data-css-r3ja7m=""
          >
            You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
          </p>
          <p
            data-css-r3ja7m=""
          >
            I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
          </p>
          <p
            data-css-r3ja7m=""
          >
            We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
          </p>
        </div>
      </main>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <aside
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-83b6zj=""
        >
          <p
            data-css-r3ja7m=""
          >
            There's not a thing in the world wrong with washing your brush. With practice comes confidence. Don't be afraid to make these big decisions. Once you start, they sort of just make themselves.
          </p>
          <p
            data-css-r3ja7m=""
          >
            You can't have light without dark. You can't know happiness unless you've known sorrow. See. We take the corner of the brush and let it play back-and-forth. Every day I learn. If we're gonna walk though the woods, we need a little path. We don't need any guidelines or formats. All we need to do is just let it flow right out of us.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Let's make a nice big leafy tree. Let's go up in here, and start having some fun God gave you this gift of imagination. Use it. Life is too short to be alone, too precious. Share it with a friend.
          </p>
          <p
            data-css-r3ja7m=""
          >
            I get carried away with this brush cleaning. What the devil. It just happens - whether or not you worried about it or tried to plan it. Imagination is the key to painting.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Use absolutely no pressure. Just like an angel's wing. We'll put some happy little leaves here and there. You don't have to spend all your time thinking about what you're doing, you just let it happen. Just let your mind wander and enjoy. This should make you happy.
          </p>
          <p
            data-css-r3ja7m=""
          >
            Very easy to work these to death. Just a happy little shadow that lives in there. There are no mistakes. You can fix anything that happens. But they're very easily killed. Clouds are delicate.
          </p>
          <p
            data-css-r3ja7m=""
          >
            We'll throw some happy little limbs on this tree. You better get your coat out, this is going to be a cold painting. The only thing worse than yellow snow is green snow.
          </p>
        </div>
      </aside>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
</div>
`;
